Added last used commands.